--- a/infolio-drft-api/Gemfile
+++ b/infolio-drft-api/Gemfile
@@ -18,6 +18,9 @@ gem 'bcrypt', '~> 3.1.7'
 
 gem 'jwt'
 
+
+gem 'figaro'
+
 gem 'fast_jsonapi'
 
 # Use Active Storage variant
@@ -30,6 +33,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 gem 'rack-cors'
 
 group :development, :test do
+  gem 'pry-rails'
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
 end
